--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
   port: 8765
 spring:
   application:
-    name: service-fegin
+    name: service-feign
 feign:
   hystrix:
     enabled: true
