--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -6,3 +6,9 @@ server.port=8881
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+management.security.enabled=false
